Fixed company logo image size on mobile.

--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -1,13 +1,15 @@
 .tagline {
-  padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .company-logo {
-  max-width: 300px;
-  margin-top: 20px;
+    display: block;
+    max-width: 300px;
+    width: 100%;
+    margin-top: 20px;
 }
 
 .tech-logo {
-  max-width: 100px;
-  padding: 10px;
+    max-width: 100px;
+    padding: 10px;
 }
